[B]Version 1.0.1 (Sep 13, 2012)[/B]
- Support up to 5 recording directory mappings

[B]Version 1.0.0 (Sep 11, 2012)[/B]
- Initial commit to Eden add-on system