@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.SageTV"
        name="SageTV"
-       version="1.0.0"
+       version="1.1.0"
        provider-name="aaronb,kricker,LehighBri">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
